--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <title>React App</title>
   </head>
   <body>
+    <audio></audio>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
